fix: #7 Nav Dropdowns are clickable when collapsed

--- a/src/styles/_broen-nav.scss
+++ b/src/styles/_broen-nav.scss
@@ -76,11 +76,6 @@
   background: $nav-item-group-item-active-bg;
 }
 
-.nav-link {
-  padding: 2px;
-  padding-left: 32px;
-}
-
 .nav-link,
 .nav-link:hover,
 .nav-link:active,
@@ -88,6 +83,16 @@
 .nav-link:focus {
   display: block;
   text-decoration: none;
+}
+
+.nav-link {
+  padding: 2px;
+  padding-left: 32px;
+  display: none;
+}
+
+.nav-item-open .nav-link {
+  display: block;
 }
 
 #toggle-expand,
